// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders home page 1`] = `
<h1
  className="texts"
>
  Math Magicians
</h1>
`;

exports[`renders quotes page 1`] = `
<div>
  <h1
    className="texts"
  >
    Math is fun
  </h1>
</div>
`;
